--- a/_posts/2000-01-03-services.md
+++ b/_posts/2000-01-03-services.md
@@ -1,12 +1,10 @@
 ---
-title: "About"
-bg: blue
+title: "Services"
+bg: green
 color: white
 fa-icon: check-square-o
 ---
 
-## Basically
-
-# this theme rocks.
+# Services
 
 Text text text
