--- a/_posts/2000-01-03-services.md
+++ b/_posts/2000-01-03-services.md
@@ -1,7 +1,7 @@
 ---
 title: "Services"
-bg: green
-color: white
+bg: '#5AB9C2'
+color: black
 fa-icon: spell-check
 ---
 
@@ -9,4 +9,4 @@ fa-icon: spell-check
 
 Quisque ultrices ante felis. Mauris tempus lectus nec ex lobortis, at congue nunc maximus. Aenean in feugiat felis, ultrices molestie turpis. Donec mollis ornare sapien. Quisque facilisis augue ornare, facilisis urna eget, vestibulum nisi. Donec ac nisi et enim maximus mattis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi.
 
-Proin viverra dapibus augue, vel gravida nibh accumsan sit amet. Suspendisse quis placerat velit. Maecenas facilisis erat ut enim laoreet suscipit. Phasellus ultrices ultricies purus condimentum mollis. Nullam ornare gravida libero, non sollicitudin quam aliquam eu. Nam eleifend, leo condimentum congue faucibus, massa tortor pellentesque diam, non faucibus augue velit sed nunc. Nunc sit amet urna ac ipsum ultricies posuere. 
+Proin viverra dapibus augue, vel gravida nibh accumsan sit amet. Suspendisse quis placerat velit. Maecenas facilisis erat ut enim laoreet suscipit. Phasellus ultrices ultricies purus condimentum mollis. Nullam ornare gravida libero, non sollicitudin quam aliquam eu. Nam eleifend, leo condimentum congue faucibus, massa tortor pellentesque diam, non faucibus augue velit sed nunc. Nunc sit amet urna ac ipsum ultricies posuere.
