--- a/_posts/2000-01-03-projects.md
+++ b/_posts/2000-01-03-projects.md
@@ -2,10 +2,10 @@
 title: "Projects"
 bg: blue3
 color: black
-fa-icon: spell-check
+fa-icon: book-open
 ---
 
-# Services
+# Past projects
 
 Quisque ultrices ante felis. Mauris tempus lectus nec ex lobortis, at congue nunc maximus. Aenean in feugiat felis, ultrices molestie turpis. Donec mollis ornare sapien. Quisque facilisis augue ornare, facilisis urna eget, vestibulum nisi. Donec ac nisi et enim maximus mattis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi.
 
