--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -4,7 +4,7 @@ bg: blue1
 color: black
 ---
 
-# Morgan's Editorial Services
+# **Morgan's Editorial Services**
 
 Quisque ultrices ante felis. Mauris tempus lectus nec ex lobortis, at congue nunc maximus. Aenean in feugiat felis, ultrices molestie turpis. Donec mollis ornare sapien. Quisque facilisis augue ornare, facilisis urna eget, vestibulum nisi. Donec ac nisi et enim maximus mattis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi.
 
