--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -4,6 +4,10 @@ bg: blue1
 color: black
 ---
 
+<div class="alert alert-primary" role="alert">
+  Site under development!
+</div>
+
 # **Morgan's Editorial Services**
 
 ![glasses](/img/glasses-brandi-redd-unsplash.jpg)
