fixed link highlights, added grid

--- a/_posts/2000-01-03-projects.md
+++ b/_posts/2000-01-03-projects.md
@@ -11,4 +11,42 @@ Quisque ultrices ante felis. Mauris tempus lectus nec ex lobortis, at congue nun
 
 Proin viverra dapibus augue, vel gravida nibh accumsan sit amet. Suspendisse quis placerat velit. Maecenas facilisis erat ut enim laoreet suscipit. Phasellus ultrices ultricies purus condimentum mollis. Nullam ornare gravida libero, non sollicitudin quam aliquam eu. Nam eleifend, leo condimentum congue faucibus, massa tortor pellentesque diam, non faucibus augue velit sed nunc. Nunc sit amet urna ac ipsum ultricies posuere.
 
+<div class="row">
+  <div class="col-lg-4 col-sm-6 mb-4">
+    <div class="card h-100">
+      <a href="#"><img class="card-img-top" src="img/sample700x400.png" alt=""></a>
+      <div class="card-body">
+        <h4 class="card-title">
+          <a href="#">Project One</a>
+        </h4>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-4 col-sm-6 mb-4">
+    <div class="card h-100">
+      <a href="#"><img class="card-img-top" src="img/sample700x400.png" alt=""></a>
+      <div class="card-body">
+        <h4 class="card-title">
+          <a href="#">Project Two</a>
+        </h4>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-4 col-sm-6 mb-4">
+    <div class="card h-100">
+      <a href="img/sample700x400.png"><img class="card-img-top" src="img/sample700x400.png" alt=""></a>
+      <div class="card-body">
+        <h4 class="card-title">
+          <a href="#">Project Three</a>
+        </h4>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+Proin viverra dapibus augue, vel gravida nibh accumsan sit amet. Suspendisse quis placerat velit. Maecenas facilisis erat ut enim laoreet suscipit. Phasellus ultrices ultricies purus condimentum mollis. Nullam ornare gravida libero, non sollicitudin quam aliquam eu. Nam eleifend, leo condimentum congue faucibus, massa tortor pellentesque diam, non faucibus augue velit sed nunc. Nunc sit amet urna ac ipsum ultricies posuere.
+
 Quisque ultrices ante felis. Mauris tempus lectus nec ex lobortis, at congue nunc maximus. Aenean in feugiat felis, ultrices molestie turpis. Donec mollis ornare sapien. Quisque facilisis augue ornare, facilisis urna eget, vestibulum nisi. Donec ac nisi et enim maximus mattis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi.
